automate procees written to create an html file from template and content

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jorge Rodriguez",
   "dependencies": {
     "gulp": "~3.9.0",
-    "gulp-util": "~3.0.7"
+    "gulp-util": "~3.0.7",
+    "gulp-template-html": "0.0.2"
   }
 }
