--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gulp": "~3.9.0",
     "gulp-util": "~3.0.7",
-    "gulp-template-html": "0.0.2"
+    "gulp-template-html": "0.0.2",
+    "gulp-prettify": "~0.3.0"
   }
 }
