--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "~3.9.0",
     "gulp-util": "~3.0.7",
     "gulp-template-html": "0.0.2",
-    "gulp-prettify": "~0.3.0"
+    "gulp-prettify": "~0.3.0",
+    "gulp-inline-css": "~3.0.0"
   }
 }
