--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "Jorge Rodriguez",
   "dependencies": {
     "gulp": "~3.9.0",
-    "gulp-util": "~3.0.7",
-    "gulp-template-html": "0.0.2",
+    "gulp-inline-css": "~3.0.0",
     "gulp-prettify": "~0.3.0",
-    "gulp-inline-css": "~3.0.0"
+    "gulp-replace-task": "^0.11.0",
+    "gulp-template-html": "0.0.2",
+    "gulp-util": "~3.0.7"
   }
 }
