--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-template-html": "0.0.2",
     "gulp-util": "~3.0.7",
     "gulp-zip": "^3.0.2",
-    "run-sequence": "^1.1.4"
+    "run-sequence": "^1.1.4",
+    "yargs": "^3.29.0"
   }
 }
